[876]: Partners Page- Fix Spacing/Paddings

--- a/src/app/pages/partners/custom-accordion.scss
+++ b/src/app/pages/partners/custom-accordion.scss
@@ -1,7 +1,7 @@
 $borderRadius: 4px;
 $borderLeft: 10px solid #1a237e;
 $marginTop: 1rem;
-$padding: 0.5rem;
+$padding: 0.5;
 
 .custom-accordion-collapsed {
     background-color: #fff;
@@ -10,7 +10,7 @@ $padding: 0.5rem;
     margin-top: $marginTop;
     .panel-heading {
         background-color: #fff;
-        padding: $padding;
+        padding: $padding !important;
     }
 }
 
@@ -21,6 +21,6 @@ $padding: 0.5rem;
     margin-top: $marginTop;
     .panel-heading {
         background-color: #dedede;
-        padding: $padding;
+        padding: $padding !important;
     }
 }
